# quant_dffc

./: .gitignore  LICENSE  README.md  aa.py  improved_vectorbt_strategy.py  learn_vectorbt.ipynb  pyproject.toml  strategy_exploration.ipynb
dffc/: __init__.py  _holt_winters.py  _utils.py  fund_data.py
dffc/data_provider/: __init__.py  base.py  eastmoney_provider.py  stock_net_value_crawler.py
dffc/holt_winters/: __init__.py  _holt_winters.py  _optimization.py  holtwinter_op_list.py
dffc/strategies/: __init__.py  base.py
wxy_backtest/hw_dual_reallocation/: backtest.ipynb  backtest.py  strategy.py
